--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: grafana/grafana-oss
     container_name: grafana
     restart: unless-stopped
+    user: '0'
     ports:
       - '3000:3000'
     volumes:
