--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: grafana/grafana-oss
     container_name: grafana
     restart: unless-stopped
+    environment:
+     - GF_SERVER_ROOT_URL=http://grafana:3000/
     user: '0'
     ports:
       - '3000:3000'
